astric overlapping issue for layout 1 #10560

--- a/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-form-builder.less
@@ -117,10 +117,7 @@
         height: 35px;
     }
     margin: 10px;
-    .form-layout-1{
-         span.required{
-            margin-top: 5px;
-        }
+    .form-layout-1{ 
         position: relative;
         width: 50%;
         margin: auto;
